--- a/mainapp/static/css/estiloq.css
+++ b/mainapp/static/css/estiloq.css
@@ -2,8 +2,13 @@ body{
     background-color: #2a2d31;
     color: black;
 }
-div {
-    display: block;
+
+@media screen and (max-width: 900px) {
+    .comment_content{
+        
+        width: 92% !important; /* Porcentaje más amplio para el contenido en pantallas pequeñas */
+       
+    }
 }
 .title-page{
     margin-top: 15px;
@@ -310,31 +315,113 @@ li {
 
 
 #comment_container{
-    background-image: url(https://img.freepik.com/foto-gratis/pico-montana-nevada-majestuosidad-galaxia-estrellada-ia-generativa_188544-9650.jpg?w=1380&t=st=1702926013~exp=1702926613~hmac=6328f5e479e0761aba202c7f8bbf7b672f633e427ae08c266b16652cad23587e);
-    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    padding-bottom: 20%;
+    margin: auto;
+    background-image: url(https://images.pexels.com/photos/4175070/pexels-photo-4175070.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-attachment: fixed;
     background-size: 100% 100%;
     
 }
-
 .alert-warning{
     margin-bottom: 30px;
 }
 
-.row{
+/* .row{
     border-color: #0669AD;
     border-style: dashed;
 }
 .col{
     border-color: #0669AD;
     border-style: dashed;
-}
+} */
 
-#btn-register{
-    opacity: 0.8;
-    color: white;
-}
 
 #login{
     margin-top: 55px;
 }
+.comment_content{
+    width: 50%;
+    margin: auto;
+}
+.comment_card{
+    opacity: 0.7;
+    color: black;
+    font-weight: 600;   
+}
+.email{
+    font-size: small;
+    color: rgb(155, 155, 155);
+    margin-top: -4px;
+}
+.comments_top{
+    padding-top: 20px;
+    margin-bottom: 80px;
+}
+
+#acceder{
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+#registrarse{
+    margin-bottom: 10px;
+}
+.profile{
+    display: block;
+    height: auto;
+    text-align: center;
+    width: 40%;
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 5px;
+    color: #080808;
+
+}
+#salir{
+    width: auto;
+}
+#comentar{
+    height: 140px;
+    max-width: 60rem;
+    margin-bottom: 30px;
+}
+
+
+#comentar .button{
+    width: 90%;
+    margin-left: 5%;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+}
+#comentar .button:hover{
+    background-color: rgb(214, 214, 214);
+    color: black;
+}
+.comment_field input[type="text"]{
+    height: 45px;
+    width: 90%;
+    margin-left: 5%;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    background-color: rgb(219, 218, 218);
+    border-color: white;
+    border-style: solid;
+}
+.comment_field label{
+    background-color: white;
+    margin-left: 6%;
+    padding-top: 10px;
+    color: black;
+    font-weight: 700;
+
+}
+.estilo_comentario{
+    background-color: white;
+    font-weight: 600;
+    opacity: 0.65;
+    border-radius: 8px;
+}
+
