--- a/mainapp/static/css/estilosr.css
+++ b/mainapp/static/css/estilosr.css
@@ -1,3 +1,6 @@
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body{
     background-color: #2a2d31;
     color: black;
@@ -425,3 +428,49 @@ li {
     border-radius: 8px;
 }
 
+/* -------Experiencia alboral-------- */
+.experience-card{
+    margin: auto;
+    margin-top: 50px;
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+.experience-container{
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+/* ---------Estilos sobre mi-------- */
+#about1{
+    background-color: #F3C295;
+
+}
+#about2{
+    background-color: #85D1DD;
+}
+#about3{
+    background-color: #396578;
+}
+#about4{
+    background-color: #171E38;
+}
+#about1 .card,
+#about2 .card,
+#about3 .card,
+#about4 .card
+{
+    margin: auto;
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+
+#about1,
+#about2,
+#about3,
+#about4{
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.card-link{
+    text-decoration: none;
+}
