--- a/experience/templates/experiences.html
+++ b/experience/templates/experiences.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="experience-container">
     {% for experiencia in experiencias %}
-            <div class="experience-card card mb-3" style="max-width: 540px;">
+            <div class="experience-card card mb-3" style="max-width: 60%;">
                 <div class="row g-0">
                 <div class="col-md-4">
                     <img src="{{experiencia.image.url}}" class="img-fluid rounded-start" alt="...">
