--- a/mainapp/templates/mainapp/layouts/layout.html
+++ b/mainapp/templates/mainapp/layouts/layout.html
@@ -15,7 +15,7 @@
     {% comment %}valores estaticos {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/estilosr.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/estilosm.css' %}" />
     
     
     
@@ -57,7 +57,7 @@
         </div>
     </div>
     <footer>
-        master en python &copy; Jesus MAgdaleno - {% now "d/m/y"%}
+        Presentación de habilidad &copy; Jesus Magdaleno Orozco - {% now "d/m/y"%}
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
