Ajuste de tamaños

--- a/comments/templates/comments.html
+++ b/comments/templates/comments.html
@@ -47,7 +47,7 @@
             {% endif %}
             
                 {% for comentario in comentarios %}
-                    <div class="comment_card card mb-3" style="width: 100%;">
+                    <div class="comment_card card mb-3" style="width: 28rem;">
                         <div class="card-header"> 
                             {{comentario.user.first_name}} {{comentario.user.last_name}} 
                             <div class="email">#{{comentario.user.username}} - {{comentario.user.email}}</div>
