--- a/mainapp/static/css/estilosñ.css
+++ b/mainapp/static/css/estilosñ.css
@@ -242,7 +242,7 @@ li {
     padding-bottom: 60px;
 }
 #index3-title{
-    width: 80%;
+    width: 28rem;
     margin:auto;
     margin-top: 40px;
     text-align: center;
@@ -439,6 +439,7 @@ li {
     opacity: 0.7;
     color: black;
     font-weight: 600;   
+    margin: auto;
 }
 .email{
     font-size: small;
@@ -446,8 +447,12 @@ li {
     margin-top: -4px;
 }
 .comments_top{
+    width: 28rem;
     padding-top: 20px;
-    margin-bottom: 80px;
+    padding-bottom: 30px;
+    margin: auto;
+    text-align: center;
+    
 }
 
 #acceder{
