--- a/comments/templates/comments.html
+++ b/comments/templates/comments.html
@@ -13,7 +13,7 @@
         <div class="comment_content">
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-success" role="alert" style="width: 28rem; margin: auto;">
                         {{message}}
                     </div>
                 {% endfor %}
@@ -23,7 +23,7 @@
                     <span class="profile estilo_comentario">{{request.user.first_name}} {{request.user.last_name}}</span>
                     <span id="salir"><a href={% url 'logout' %}  class="btn btn-light estilo_comentario">Salir</a></span>
                 </div>
-                <form id="comentar" class="estilo_comentario" method="post" action="">
+                <form id="comentar" class="estilo_comentario" method="post" action="" style="width: 28rem;">
                     {% if comment_form.errors %}
                             <div class="alert alert-warning" role="alert">
                                 {{comment_form.errors}}
@@ -32,7 +32,7 @@
                     {% csrf_token %}
                     {% for field in comment_form %}
                         <div class="comment_field estilo_comentario">
-                            <label for="content" class="estilo_comentario">¿Que piensas, {{request.user.first_name}}?</label>
+                            <label for="content" class="estilo_comentario" >¿Que piensas, {{request.user.nombres}}?</label>
                             <br>
                             {{field}}
                         </div>
@@ -49,8 +49,13 @@
                 {% for comentario in comentarios %}
                     <div class="comment_card card mb-3" style="width: 28rem;">
                         <div class="card-header"> 
-                            {{comentario.user.first_name}} {{comentario.user.last_name}} 
-                            <div class="email">#{{comentario.user.username}} - {{comentario.user.email}}</div>
+                            {% if comentario.user.foto_perfil %}
+                                <img class="foto-perfil" src={{comentario.user.foto_perfil.url}}>
+                            {% else%}
+                                <img class="foto-perfil" src='/media/fotos_perfil/gatitodef.jpg'>
+                            {% endif %}
+                            {{comentario.user.nombres}} {{comentario.user.apellidos}} <span class="fecha">{{comentario.created_at|date:"d/m/Y"}}</span>
+                            <div class="email">{{comentario.user.empleo}} - {{comentario.user.email}}</div>
                         </div>
                         
                         <div class="card-body">{{comentario.content}}</div>
