--- a/comments/templates/register_page.html
+++ b/comments/templates/register_page.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div id="register_box" >
-        <form method="post" class="form" action="">
+        <form method="post" class="form" action="" enctype="multipart/form-data">
             {% if register_form.errors %}
                     <div class="alert alert-warning" role="alert">
                         {{register_form.errors}}
