--- a/mainapp/templates/mainapp/layouts/layout.html
+++ b/mainapp/templates/mainapp/layouts/layout.html
@@ -15,13 +15,14 @@
     {% comment %}valores estaticos {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/estilosr.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/estilosx.css' %}" />
     
     
     
 </head>
 <body>
     <!-- Cabecera de la pagina -->
+    <div class="main-photo"><img  src='/media/fotos_perfil/yo.jpg'></div>
     <header>
         <nav class="navbar bg-body-tertiary">
             <ul class="container-fluid justify-content-start">
