--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -65,6 +65,7 @@
               <a href="https://www.facebook.com/Magdaleno8" class="card-link">Facebook</a>
               <a href="https://www.instagram.com/magdaleno_88/" class="card-link">Instagram</a>
               <a href="https://www.linkedin.com/in/jes%C3%BAs-magdaleno-orozco-8b0603240/" class="card-link">Linkedin</a>
+              <a href="https://github.com/magdaleno88" class="card-link">Github</a>
             </div>
         </div>
     </div>
